--- a/recruiter/apps/hr/templates/hr/base.html
+++ b/recruiter/apps/hr/templates/hr/base.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+{% extends 'hr/basefile-styling.html' %}
+{% block base %}
 
-    <meta charset="UTF-8">
-    <title>{% block title %}DNB Recruiter{% endblock %}</title>
-    {% load staticfiles %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="{% static 'apps/hr/style.css' %}" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    {% if not user.is_authenticated  %}
 
-</head>
+        <meta http-equiv="refresh" content="0; url={% url 'hr:login' %}" />
+
+    {% endif %}
+
 <body>
 
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
@@ -27,10 +24,10 @@
 
                 </button>
                 <a class="navbar-brand" href=#>DNB Recruiter</a>
-                </div>
+            </div>
             <div class="navbar-header">
 
-                <a class="navbar-brand" href="#">Username</a>
+                <a class="navbar-brand" href="">{{ user.email }}</a>
 
             </div>
         </div>
@@ -86,7 +83,7 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li class="">
-                        <a href="#">
+                        <a href="{% url 'hr:logout' %}">
                             <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logg ut
                         </a>
                     </li>
@@ -100,3 +97,5 @@
 {% endblock %}
 </body>
 </html>
+
+{% endblock %}
