--- a/recruiter/apps/hr/templates/hr/base.html
+++ b/recruiter/apps/hr/templates/hr/base.html
@@ -59,7 +59,7 @@
 
                 <ul class="nav navbar-nav">
 
-                    <li class="active">
+                    <li class="">
 
                         <a href="{% url 'hr:index' %}">
 
@@ -96,7 +96,7 @@
                     <div class="form-group">
                         <input type="text" class="form-control" name="q" value="">
                     </div>
-                    <button type="submit" class="btn btn-default">Search</button>
+                    <button type="submit" class="btn btn-default">Søk</button>
                 </form>
 
                 <ul class="nav navbar-nav navbar-right">
