--- a/recruiter/apps/hr/templates/hr/detail-base.html
+++ b/recruiter/apps/hr/templates/hr/detail-base.html
@@ -1,5 +1,5 @@
-<label>{{ user.user.get_full_name }}</label>
-<h6>{{ user.user.email }}</h6>
-<h6>{{ user.user.phone }}</h6>
-<h6>{{ user.text }}</h6>
+<label>{{ candidate.user.get_full_name }}</label>
+<h6>{{ candidate.user.email }}</h6>
+<h6>{{ candidate.user.phone }}</h6>
+<h6>{{ candidate.text }}</h6>
 <br/>
