--- a/recruiter/apps/hr/templates/hr/in-process-detail.html
+++ b/recruiter/apps/hr/templates/hr/in-process-detail.html
@@ -4,7 +4,7 @@
 
     <div id="sent_to_leader">
 
-        <h6 id="sent_to_leader">Sendt til halvor lande</h6>
+        <h6 id="sent_to_leader">Sendt til {{ candidate.leader }}</h6>
     </div>
     <div id="sent_to_leader_date">
         <h6 id="sent_to_leader_date">26.06.17</h6>
@@ -19,14 +19,12 @@
         </button>
     </form>
 
-    <form action="#" method="post" style="display: inline">
-        {% csrf_token %}
-
-        <button type="submit" class="btn btn-default btn-sm" id="send_notification">
-            Send påmindelse
-            <span class="glyphicon glyphicon-bell"></span>
-        </button>
-    </form>
+    <button data-target="#notify{{ candidate.user.id }}" type="submit" class="btn btn-default btn-sm" id="send_notification" data-toggle="modal">
+        Send påmindelse
+        <span class="glyphicon glyphicon-bell"></span>
+    </button>
 
     <br/>
 </div>
+
+{% include 'hr/notify-modal.html' %}
