--- a/recruiter/apps/hr/templates/hr/rejected-detail.html
+++ b/recruiter/apps/hr/templates/hr/rejected-detail.html
@@ -18,23 +18,18 @@
         </button>
     </form>
 
-    <form action="#" method="post" style="display: inline">
-        {% csrf_token %}
+    <button data-toggle="modal" data-target="#reject{{ candidate.user.id }}" type="submit" class="btn btn-default btn-sm" id="give_rejection">
+        Gi avslag
+        <span class="glyphicon glyphicon-remove"></span>
+    </button>
 
-        <button type="submit" class="btn btn-default btn-sm" id="give_rejection">
-            Gi avslag
-            <span class="glyphicon glyphicon-remove"></span>
-        </button>
-    </form>
-
-    <form action="#" method="post" style="display: inline">
-        {% csrf_token %}
-
-        <button type="submit" class="btn btn-default btn-sm" id="send_new_leader">
-            Send til ny leder
-            <span class="glyphicon glyphicon-send"></span>
-        </button>
-    </form>
+    <button data-toggle="modal" data-target="#send{{ candidate.user.id }}" type="submit" class="btn btn-default btn-sm" id="send_new_leader">
+        Send til ny leder
+        <span class="glyphicon glyphicon-send"></span>
+    </button>
 
 </div>
+
+{% include 'hr/send-to-leader-modal.html' %}
+{% include 'hr/reject-user-modal.html' %}
 
