--- a/recruiter/apps/hr/templates/hr/send-hr-modal.html
+++ b/recruiter/apps/hr/templates/hr/send-hr-modal.html
@@ -1,10 +1,10 @@
-<div id="send{{ candidate.user.id }}" class="modal fade" role="dialog" xmlns="http://www.w3.org/1999/html">
+<div id="sendHr{{ candidate.user.id }}" class="modal fade" role="dialog" xmlns="http://www.w3.org/1999/html">
 
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h3>Send til leder</h3>
+                    <h3>Send til HR</h3>
                 </div>
                 <div class="modal-body">
 
@@ -22,18 +22,10 @@
                                 </div>
                                 <br/>
                                 <br/>
-                                <br/>
-                                <br/>
                                 <div class="col-sm-offset-0 col-sm-10" style="display: inline">
 
                                     Til:
-                                    <select name="leader" class="actionlist">
-                                        {% for leader in query_set.2 %}
-
-                                            <option name="{{ leader.email }}" value={{ leader.email }}>{{ leader.get_full_name }}</option>
-                                        {% endfor %}
-                                    </select>
-                                    <!-- <input placeholder="til@email.no" id="to_leader_email" type="email" class="form-control" name="send_to_email" value=""/> -->
+                                    <input placeholder="til@email.no" id="to_leader_email" type="email" class="form-control" name="send_to_email" value=""/>
                                 </div>
 
                             </div>
