--- a/recruiter/apps/hr/templates/hr/untreated-detail.html
+++ b/recruiter/apps/hr/templates/hr/untreated-detail.html
@@ -9,9 +9,9 @@
         </label>
     </div>
 
-    <form action="#" method="get" style="display: inline">
+    <form action="{% url 'hr:showCV' %}" method="get" style="display: inline">
         {% csrf_token %}
-
+        <input type="hidden" name="candidate_cv" value="{{ candidate.cv }}">
         <button type="submit" class="btn btn-default btn-sm" id="see_cv">
             <span class="glyphicon glyphicon-download-alt"></span>
             Se CV
@@ -23,7 +23,6 @@
         <span class="glyphicon glyphicon-remove"></span>
         Gi avslag
     </button>
-
 
     <button class="btn btn-default btn-sm" data-toggle="modal" data-target="#send{{ candidate.user.id }}" style="display: inline" id="send_leader">
         <span class="glyphicon glyphicon-send" aria-hidden="true"></span>&nbsp; Send til leder
