Lagt til at det er mulig å flagge ubehandlede kandidater, slik at de havner øverst på listen

--- a/recruiter/apps/hr/static/hr/style.css
+++ b/recruiter/apps/hr/static/hr/style.css
@@ -37,6 +37,17 @@
 
 }
 
+#unflagged_candidate {
+
+    background-color: #ffffff;
+}
+
+#flagged_candidate {
+
+    background-color: #7dacba;
+}
+
+
 #send_notification {
 
     width: 130px;
