--- a/recruiter/apps/hr/templates/hr/in-process-detail.html
+++ b/recruiter/apps/hr/templates/hr/in-process-detail.html
@@ -10,14 +10,7 @@
         <h6 id="sent_to_leader_date">26.06.17</h6>
     </div>
 
-    <form action="#" method="get" style="display: inline">
-        {% csrf_token %}
-
-        <button type="submit" class="btn btn-default btn-sm" id="see_cv">
-            Se CV
-            <span class="glyphicon glyphicon-download-alt"></span>
-        </button>
-    </form>
+    {% include 'hr/showCV-form.html' %}
 
     <button data-target="#notify{{ candidate.user.id }}" type="submit" class="btn btn-default btn-sm" id="send_notification" data-toggle="modal">
         Send påmindelse
