--- a/recruiter/apps/hr/templates/hr/untreated-detail.html
+++ b/recruiter/apps/hr/templates/hr/untreated-detail.html
@@ -22,15 +22,7 @@
         </label>
     </div>
 
-    <form action="{% url 'hr:showCV' %}" method="get" style="display: inline">
-        {% csrf_token %}
-        <input type="hidden" name="candidate_cv" value="{{ candidate.cv }}">
-        <button type="submit" class="btn btn-default btn-sm" id="see_cv">
-            <span class="glyphicon glyphicon-download-alt"></span>
-            Se CV
-        </button>
-    </form>
-
+    {% include 'hr/showCV-form.html' %}
 
     <button class="btn btn-default btn-sm" data-toggle="modal" data-target="#reject{{ candidate.user.id }}" style="display: inline" id="give_rejection">
         <span class="glyphicon glyphicon-remove"></span>
