--- a/recruiter/apps/candidate/templates/candidate/profile.html
+++ b/recruiter/apps/candidate/templates/candidate/profile.html
@@ -5,7 +5,7 @@
 {% if not user.is_authenticated %}
 	<meta http-equiv="refresh" content"0; url={% url 'candidate:login_user' %}" />
 {% endif %}
-<nav class="navbar navbar-light" style"background-color: #e3f2fd;">
+<nav class="navbar navbar-light" style="background-color: #e3f2fd;">
 	<div class="container-field">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
@@ -14,9 +14,6 @@
 				<span class="icon-bar" style="background-color: #000000;"></span>
 			</button>
 			<a class="navbar-brand" href="">DNB</a>
-		</div>
-		<div class="navbar-header">
-			<a class="navbar-brand" href="">Hei {{ user.get_short_name }}</a>
 		</div>
 	</div>
 	<div class="containter-field">
