--- a/recruiter/apps/hr/templates/hr/new-candidate-modal.html
+++ b/recruiter/apps/hr/templates/hr/new-candidate-modal.html
@@ -19,6 +19,14 @@
                             </div>
                         </div>
 
+                         <div class="thumbnail" id="regUserDiv">
+                             <textarea id="regUserText" name="welcome_text">
+                             </textarea>
+                             <h5>Klikk på følgende link for å registrere deg:</h5>
+                             <a href="http://127.0.0.1:8000/register">http://127.0.0.1:8000/register</a>
+                             <input type="hidden" value="http://127.0.0.1:8000/register" name="register_link">
+                         </div>
+
                         <div class="form-group">
 
                             <div class="col-sm-offset-0 col-sm-10">
