--- a/recruiter/apps/hr/templates/hr/base.html
+++ b/recruiter/apps/hr/templates/hr/base.html
@@ -10,6 +10,7 @@
 
     {% endif %}
 
+
 <body>
 
     <nav class="navbar navbar-light" style="background-color: #e3f2fd;" id="main_navbar">
@@ -59,18 +60,25 @@
 
             <div class="collapse navbar-collapse" id="topNavBar">
 
+
+
                 <ul class="nav navbar-nav">
 
-                    <li id="untreated" class="active">
+                    <li >
 
-                        <a href="{% url 'hr:index' %}">
-
+                        <a href="{% url 'hr:index' %}" id="untreated"
+                                {% if view.id == 0 %}
+                                    style="color: #00ba98"
+                                {% endif %}>
                             <span class="glyphicon glyphicon-alert" aria-hidden="true"></span> Ubehandlet ({{ query_set.1.0 }})
                         </a>
                     </li>
 
                     <li class="">
-                        <a href="{% url 'hr:inProcess' %}">
+                        <a href="{% url 'hr:inProcess' %}"
+                                {% if view.id == 1 %}
+                                    style="color: #00ba98"
+                                {% endif %}>
 
                             <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> I prosess ({{ query_set.1.1 }})
                         </a>
@@ -78,14 +86,20 @@
                     </li>
 
                     <li class="">
-                        <a href="{% url 'hr:approved' %}">
+                        <a href="{% url 'hr:approved' %}"
+                            {% if view.id == 2 %}
+                                style="color: #00ba98"
+                            {% endif %}>
 
                             <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Godkjent ({{ query_set.1.2 }})
                         </a>
 
                     </li>
                     <li class="">
-                        <a href="{% url 'hr:rejected' %}">
+                        <a href="{% url 'hr:rejected' %}"
+                                {% if view.id == 3 %}
+                                    style="color: #00ba98"
+                                {% endif %}>
 
                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Avslått ({{ query_set.1.3 }})
                         </a>
