--- a/recruiter/apps/hr/templates/hr/send-to-leader-modal.html
+++ b/recruiter/apps/hr/templates/hr/send-to-leader-modal.html
@@ -46,9 +46,13 @@
                             </div>
                             <br/>
 
-
-                            <textarea id="send_about_candidate" name="text_candidate">
+                            <label>
+                                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Tekst om kandidat:
+                            </label>
+                            <textarea id="send_about_candidate" name="text_candidate" placeholder="Info om kandidat">
                             </textarea>
+
+                            <input type="text" id="hr_comment" name="hr_comment" value="" placeholder="Kommentar(valgfritt)" maxlength="100">
 
                         </div>
                         <div class="form-group">
