Dato på når en kandidate ble sendt til leder er lagt til og vises under 'I prosess'. + småfiks

--- a/recruiter/apps/hr/templates/hr/in-process-detail.html
+++ b/recruiter/apps/hr/templates/hr/in-process-detail.html
@@ -20,7 +20,7 @@
     </div>
 
     <div id="sent_to_leader_date">
-        <h6 id="sent_to_leader_date">26.06.17</h6>
+        <h6 id="sent_to_leader_date">{{ candidate.date_sent }}</h6>
     </div>
 
     {% include 'hr/showCV-form.html' %}
