--- a/recruiter/apps/hr/templates/hr/index.html
+++ b/recruiter/apps/hr/templates/hr/index.html
@@ -11,7 +11,7 @@
                 {% for candidate in query_set.0 %}
 
                     <div class="col-sm-4 col-lg-2">
-
+                        <input type="hidden" name="view_id" value="{{ view.id }}">
                         <div class="thumbnail">
 
                             {% if view.id == 0 %}
