--- a/recruiter/apps/candidate/templates/candidate/login.html
+++ b/recruiter/apps/candidate/templates/candidate/login.html
@@ -2,27 +2,28 @@
 {% block title %}Log In{% endblock %}
 
 {% block body %}
+<br>
 <div class="containter-fluid">
-	<div class="row">
+	<!--<div class="row">-->
 		<div class="col-sm-12 col-md-6">
-			<div class="panel panel-default">
+			<div class="panel panel-default" id="omriss">
 				<div class="panel-body">
-					<h3>Log In</h3> 
+					<h3 id="login_kandidat">Log In</h3> 
 					{% if error_message %}
 						<p><strong>{{ error_message }}</strong></p> 
 					{% endif %}
-					<form class="form-horizontal" role="form" action="" method="post" enctype="multipart/form-data">
+					<br>
+					<form class="form-horizontal" role="form" action="" method="post" enctype="multipart/form-data" id="usboks1">
 						{% csrf_token %}
 						{% include 'candidate/form_template.html' %}
 						<div class="form-group">
 							<div class="col-sm-offset-2 col-sm-10">
-								<button type="submit" class="btn btn-success">Login</button>
+								<button type="submit" class="btn btn-success" id="butt_green">Login</button>
 							</div>
 						</div>
 					</form>
 				</div>
 			</div>
 		</div>
-	</div>
 </div>
 {% endblock %}
