--- a/recruiter/apps/candidate/templates/candidate/profile_info.html
+++ b/recruiter/apps/candidate/templates/candidate/profile_info.html
@@ -2,21 +2,24 @@
 {% block info %}
 
 <div class="container-fluid">
-	<div class="row">
-		<div class="col-sm-12 col-md-6">
-			<div class="panel panel-default">
-				<div class="panel-heading">Brukerinfo</div>
+	<!--<div class="row">-->
+		<!--<div class="col-sm-12 col-md-6">-->
+			<div class="panel panel-default" id="omriss">
+				<div class="panel-heading" id="brukinf">User Info</div>
 				<div class="panel-body">
 					<dl>
-						<dt>Navn:</dt> 
-						<dd>{{ user.get_full_name }}</dd>
-						<dt>E-post:</dt>
-						<dd>{{ user.get_email }}</dd>
-						<dt>Telefon:</dt>
-						<dd>{{ user.get_phone }}</dd>
+						<dt id="inform">Name:</dt> 
+						<dd id="fill">{{ user.get_full_name }}</dd>
+						<br>
+						<dt id="inform">E-mail:</dt>
+						<dd id="fill">{{ user.get_email }}</dd>
+						<br>
+						<dt id="inform">Telephone:</dt>
+						<dd id="fill">{{ user.get_phone }}</dd>
+						<br>
 					</dl>
-					<a href="{% url 'candidate:edit_profile' %}" class="btn btn-info" role="button">Rediger info</a>
-					<a href="{% url 'candidate:upload' %}" class="btn btn-danger" role="button">Last opp CV</a>
+					<a href="" class="btn btn-info" role="button" id="butt">Edit Info</a>
+					<a href="{% url 'candidate:upload' %}" class="btn btn-danger" role="button" id="butt">Upload CV</a>
 				</div>
 			</div>
 		</div>
