--- a/recruiter/apps/candidate/templates/candidate/register.html
+++ b/recruiter/apps/candidate/templates/candidate/register.html
@@ -2,21 +2,24 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
+
 <div class="container-fluid">
 	<div class="row">
-		<div class="col-sm-12 col-md-6">
+		<div id="usboks">
 			<div class="panel panel-default">
 				<div class="panel-body">
-					<h3>Registrer Interesse</h3>
+					<h3 id="registrer_interesse">Register Profile</h3>
 					{% if error_message %}
 						<p><strong>{{ error_message }}</strong></p>
 					{% endif %}
-					<form class="form-horizontal" role="form" action="" method="post" enctype="multipart/form-data">
+					<br>
+					<form class="form-horizontal" role="form" action="" method="post" enctype="multipart/form-data" 
+					id="usboks1">
 						{% csrf_token %}
 						{% include 'candidate/form_template.html' %}
 						<div class="form-group">
 							<div class="col-sm-offset-2 col-sm-10">
-								<button type="submit" class="btn btn-success">Registrer</button>
+								<button type="submit" class="btn btn-success" id="butt_green">Register</button>
 							</div>
 						</div>
 					</form>
