--- a/recruiter/apps/hr/templates/hr/accepted-detail.html
+++ b/recruiter/apps/hr/templates/hr/accepted-detail.html
@@ -4,7 +4,7 @@
 
     <div id="sent_to_leader">
 
-        <h6 id="sent_to_leader">Sendt til halvor lande</h6>
+        <h6 id="sent_to_leader">Sendt to Halvor Lande</h6>
     </div>
     <div id="sent_to_leader_date">
         <h6 id="sent_to_leader_date">26.06.17</h6>
