--- a/recruiter/apps/hr/templates/hr/base.html
+++ b/recruiter/apps/hr/templates/hr/base.html
@@ -10,21 +10,20 @@
 
     {% endif %}
 
-
 <body>
 
-    <nav class="navbar navbar-light" style="background-color: #e3f2fd;" id="main_navbar">
+    <nav class="navbar navbar-light" style="background-color: #F5F5F5;" id="main_navbar">
 
-        <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+        <nav class="navbar navbar-light" style="background-color: #F5F5F5;">
 
             <div class="container-field">
 
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#topNavBar">
 
-                        <span class="icon-bar" style="background-color: #000000;"></span>
-                        <span class="icon-bar" style="background-color: #000000;"></span>
-                        <span class="icon-bar" style="background-color: #000000;"></span>
+                        <span class="icon-bar" style="background-color: #FBFAFA;"></span>
+                        <span class="icon-bar" style="background-color: #FBFAFA;"></span>
+                        <span class="icon-bar" style="background-color: #FBFAFA;"></span>
 
                     </button>
                     <a class="navbar-brand" href="">DNB Recruiter</a>
@@ -36,7 +35,7 @@
                 </div>
                 <ul class="nav navbar-nav navbar-left">
                     <li class="">
-                        <a data-toggle="modal" data-target="#AddCandModal">
+						<a data-toggle="modal" data-target="#AddCandModal" id="navigasjons_bar">
                             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp; Ny kandidat
                         </a>
                     </li>
@@ -60,16 +59,16 @@
 
             <div class="collapse navbar-collapse" id="topNavBar">
 
-
-
                 <ul class="nav navbar-nav">
 
-                    <li >
+					<li id="untreated" class="active">
+					<!-- <li> -->
 
-                        <a href="{% url 'hr:index' %}" id="untreated"
+
+                        <a href="{% url 'hr:index' %}" 
                                 {% if view.id == 0 %}
                                     style="color: #00ba98"
-                                {% endif %}>
+                                {% endif %} id="navigasjons_bar">
                             <span class="glyphicon glyphicon-alert" aria-hidden="true"></span> Ubehandlet ({{ query_set.1.0 }})
                         </a>
                     </li>
@@ -78,7 +77,7 @@
                         <a href="{% url 'hr:inProcess' %}"
                                 {% if view.id == 1 %}
                                     style="color: #00ba98"
-                                {% endif %}>
+                                {% endif %} id="navigasjons_bar">
 
                             <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span> I prosess ({{ query_set.1.1 }})
                         </a>
@@ -89,7 +88,7 @@
                         <a href="{% url 'hr:approved' %}"
                             {% if view.id == 2 %}
                                 style="color: #00ba98"
-                            {% endif %}>
+                            {% endif %} id="navigasjons_bar">
 
                             <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> Godkjent ({{ query_set.1.2 }})
                         </a>
@@ -99,7 +98,7 @@
                         <a href="{% url 'hr:rejected' %}"
                                 {% if view.id == 3 %}
                                     style="color: #00ba98"
-                                {% endif %}>
+                                {% endif %} id="navigasjons_bar">
 
                             <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Avslått ({{ query_set.1.3 }})
                         </a>
@@ -112,12 +111,12 @@
                     <div class="form-group">
                         <input type="text" class="form-control" name="q" value="">
                     </div>
-                    <button type="submit" class="btn btn-default">Søk</button>
+                    <button type="submit" class="btn btn-default" id="butt">Søk</button>
                 </form>
 
                 <ul class="nav navbar-nav navbar-right">
                     <li class="">
-                        <a href="{% url 'hr:logout' %}">
+                        <a href="{% url 'hr:logout' %}" id="navigasjons_bar">
                             <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logg ut
                         </a>
                     </li>
