--- a/recruiter/apps/hr/templates/hr/in-process-detail.html
+++ b/recruiter/apps/hr/templates/hr/in-process-detail.html
@@ -1,4 +1,4 @@
-<div class="caption">
+<div class="caption" id="her_detaljer">
 
     {%  include 'hr/detail-base.html' %}
 
@@ -25,7 +25,7 @@
 
     {% include 'hr/showCV-form.html' %}
 
-    <button data-target="#notify{{ candidate.user.id }}" type="submit" class="btn btn-default btn-sm" id="send_notification" data-toggle="modal">
+    <button data-target="#notify{{ candidate.user.id }}" type="submit" class="btn btn-default btn-sm" id="butt_paminnelse" data-toggle="modal">
         Send påmindelse
         <span class="glyphicon glyphicon-bell"></span>
     </button>
