--- a/recruiter/apps/hr/templates/hr/new-candidate-modal.html
+++ b/recruiter/apps/hr/templates/hr/new-candidate-modal.html
@@ -2,15 +2,14 @@
 <div id="AddCandModal" class="modal fade" role="dialog">
 
         <div class="modal-dialog">
-            <div class="modal-content">
+			<div class="modal-content" id="omriss_mail">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h3>Legg til ny kandidat</h3>
+                    <h3 id="send_til_leder">Legg til ny kandidat</h3>
                 </div>
                 <div class="modal-body">
 
                     <form class="form-horizontal" action="{% url 'hr:newCandidate' %}" method="post" enctype="multipart/form-data">
-
                         {% csrf_token %}
                         <input type="hidden" name="view_id" value="{{ view.id }}">
                         <div class="form-group">
@@ -23,16 +22,13 @@
                          <div class="thumbnail" id="regUserDiv">
                              <textarea id="regUserText" name="welcome_text">
                              </textarea>
-                             <h5>Klikk på følgende link for å registrere deg:</h5>
-                             <a href="http://127.0.0.1:8000/register">http://127.0.0.1:8000/register</a>
-                             <input type="hidden" value="http://127.0.0.1:8000/register" name="register_link">
                          </div>
 
                         <div class="form-group">
 
                             <div class="col-sm-offset-0 col-sm-10">
 
-                                <button id="buttonCandEmail" type="submit" class="btn btn-success">Registrer</button>
+                                <button id="butt_green" type="submit" class="btn btn-success">Registrer</button>
                             </div>
 
                         </div>
@@ -41,7 +37,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Avbryt</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="butt">Avbryt</button>
                 </div>
             </div>
         </div>
