--- a/recruiter/apps/hr/templates/hr/send-hr-modal.html
+++ b/recruiter/apps/hr/templates/hr/send-hr-modal.html
@@ -1,10 +1,10 @@
 <div id="sendHr{{ candidate.user.id }}" class="modal fade" role="dialog" xmlns="http://www.w3.org/1999/html">
 
         <div class="modal-dialog">
-            <div class="modal-content">
+            <div class="modal-content" id="omriss_mail">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h3>Send til HR</h3>
+                    <h3 id="send_til_leder">Send til HR</h3>
                 </div>
                 <div class="modal-body">
 
@@ -16,13 +16,13 @@
                         <div class="thumbnail">
 
                             <div class="form-group">
-                                <div class="col-sm-offset-0 col-sm-10" style="display: inline">
+                                <div class="col-sm-offset-0 col-sm-10" style="display: inline" id="fra_til">
                                     Fra:
                                     <input id="from_hr_email" type="email" class="form-control" name="send_from_email" value="{{ user.email }}"/>
                                 </div>
                                 <br/>
                                 <br/>
-                                <div class="col-sm-offset-0 col-sm-10" style="display: inline">
+                                <div class="col-sm-offset-0 col-sm-10" style="display: inline" id="fra_til">
 
                                     Til:
                                     <input placeholder="til@email.no" id="to_leader_email" type="email" class="form-control" name="send_to_email" value=""/>
@@ -45,9 +45,9 @@
                         </div>
                         <div class="form-group">
 
-                            <div class="col-sm-offset-0 col-sm-10">
+                            <div class="col-sm-offset-0 col-sm-10" id="informasjonsfelt_mail">
 
-                                <button id="buttonCandEmail" type="submit" class="btn btn-success">
+                                <button id="butt_green" type="submit" class="btn btn-success">
                                     <span class="glyphicon glyphicon-send" aria-hidden="true"></span>&nbsp; Send
                                 </button>
                             </div>
@@ -57,7 +57,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Avbryt</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="butt">Avbryt</button>
                 </div>
             </div>
         </div>
