--- a/recruiter/apps/hr/templates/hr/untreated-detail.html
+++ b/recruiter/apps/hr/templates/hr/untreated-detail.html
@@ -12,8 +12,9 @@
             <span class="glyphicon glyphicon-flag"></span>
         </button>
     </form>
-
+	<div id="her_detaljer">
     {%  include 'hr/detail-base.html' %}
+	</div>
     <!--
     <div class="thumbnail" id="candidateInfoDiv">
         <label id="candidateInfo">
@@ -22,8 +23,9 @@
         </label>
     </div>
     -->
-
+	<div id="vis_cv">
     {% include 'hr/showCV-form.html' %}
+	</div>
 
     <button class="btn btn-default btn-sm" data-toggle="modal" data-target="#reject{{ candidate.user.id }}" style="display: inline" id="give_rejection">
         <span class="glyphicon glyphicon-remove"></span>
