--- a/static/hr/style.css
+++ b/static/hr/style.css
@@ -5,19 +5,33 @@
 
 .navbar{
 
-    border-radius: 0;
+    border-radius: 0px;
+
 }
 
 .navbar-brand {
 
-     font-family: 'Satisfy', cursive;
+     font-family: "Segoe UI",Arial,sans-serif;
+     color: #008789;
+     font-size: 20px;
+}
+#send_til_leder, #send_paminnelse {
+    font-family: "Segoe UI",Arial,sans-serif;
+     color: #008789;
+     font-size: 20px;
 }
 
-#candidateInfo {
+#fra_til{
+    font-family: "Segoe UI",Arial,sans-serif;
+     color: #008789;
+     font-size: 14px;   
+}
+#candidateInfo #informasjonsfelt_mail, #paminnelse_kandidat{
 
-    font-size: small;
-    font-style: normal;
+    font-size: 12px;
+    font-family: "Segoe UI",Arial,sans-serif;
     font-weight: 400;
+    text-indent: 6px;
 }
 
 #send_about_candidate {
@@ -25,8 +39,8 @@
     width: 100%;
     height: 120px;
     border-radius: 10px;
-    box-shadow: 0 0 0 0.5px #000;
-    border: 1px transparent;
+    /*box-shadow: 0 0 0 0.5px #000;*/
+    border: 30px transparent;
 }
 
 #see_cv, #give_rejection, #send_leader, #send_hr {
@@ -34,6 +48,8 @@
     width: 110px;
     height: 30px;
     margin-top: 5px;
+    border-radius: 30px;
+   
 
 }
 
@@ -64,9 +80,14 @@
 }
 
 #candidateInfoDiv {
-
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 10;
     overflow: scroll;
     height: 60px;
+    width: 150px;
+    margin-top: 5px;
+    border-radius: 20px;
 }
 
 #sent_to_leader, #sent_to_leader_date {
@@ -75,4 +96,141 @@
     margin: 0 auto;*/
     font-weight: 400;
 }
+
+#hr_login{
+    content: center;
+    width: 150%;
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 0.1;
+    background-color: #FFFFFF;
+    color: #008789;
+    text-indent: 230px;
+}
+
+#butt_green{
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 0.1;
+    background-color: #008789;
+    color: #FFFFFF;
+    border: solid #008789 1px;
+    padding: 13px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 30px;
+}
+
+#omriss{
+    border: solid #C0C0C0 1px;
+    padding: 10px 10px;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 30px;
+    width: 1000px
+}
+
+#omriss_mail{
+    border: solid #C0C0C0 1px;
+    padding: 10px 10px;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 30px;
+    width: 600px
+}
+
+#inputfield{
+    border-radius: 30px;
+    padding: 5px 20px;
+    border-width: 1px;
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+}
+
+#usboks1{
+    content: center;
+    width: 150%;
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 0.1;
+    background-color: #FFFFFF;
+    color: #000000;
+}
+/*------------inne på HR--------------*/
+
+#vis_cv, #give_rejection, #send_leader, #send_hr, #sent_to_leader{
+    border-radius: 50px;
+    /*padding: 5px 20px;*/
+    border-width: 1px;
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+}
+
+#sent_to_leader_date{
+    border-radius: 50px;
+    /*padding: 5px 20px;*/
+    border-width: 1px;
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 10px;
+    color: 
+}
+
+#her_detaljer{
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 12px;
+    color: #008789;
+}
+
+/*---------navigationbar---------*/
+#navigasjons_bar{
+    font-family: "Segoe UI",Arial,sans-serif;
+     color: #008789;
+     font-size: 15px;
+}
+
+#butt{
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 0.1;
+    background-color: #FFFFFF;
+    color: #008789;
+    border: solid #C0C0C0 1px;
+    padding: 13px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 30px;
+}
+
+#butt_paminnelse{
+    font-family: "Segoe UI",Arial,sans-serif;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 0.1;
+    background-color: #FFFFFF;
+    color: #008789;
+    border: solid #C0C0C0 1px;
+    padding: 13px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 30px;
+}
+
+
+
+
+
+
+
+
 
