Add name to new candidate for autofill. Candidate view for leaders

--- a/recruiter/apps/hr/templates/hr/new-candidate-modal.html
+++ b/recruiter/apps/hr/templates/hr/new-candidate-modal.html
@@ -16,6 +16,8 @@
                             <div class="col-sm-offset-0 col-sm-10">
 
                                 <input placeholder="Kandidat-email" id="candEmail" type="email" class="form-control" name="cand_email" value=""/>
+								<input placeholder="Fornavn" id="firstName" type="text" class="form-control" name="first_name" value=""/>
+								<input placeholder="Etternavn" id="lastName" type="text" class="form-control" name="last_name" value=""/>
                             </div>
                         </div>
 
