--- a/recruiter/apps/candidate/templates/candidate/base.html
+++ b/recruiter/apps/candidate/templates/candidate/base.html
@@ -11,10 +11,14 @@
 		{% load staticfiles %}
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="{% static 'candidate/style.css' %}" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	</head>
 	<body>
+
 		{% block body %}
+
 		{% endblock %}
 	</body>
+
 </html>
-		
